consolidate copyright notices; update printed copyright notices; documentation
Following the README remark explaining how to interpret compact copyright
notices with dashes according to maintain.texi {Copyright Notices} (already
added before this change set), change some copyright notices to be compact.
Update some printed copyright notices.

* README: Update copyright notice.
* Makefile.am: Likewise.
* bin/jitter-config.in.m4sh: Likewise.
* scripts/generate-fast-branches.in.m4sh: Likewise.
* doc/jitter.texi: Likewise.

* example-vms/jitterlisp/doc/jitterlisp.texi: Update copyright notice.  Comment.
* example-vms/structured/doc/structured.texi: Likewise.  Documentation.

* m4-utility/jitter-script.m4sh: Update copyright notice.
(version): Update printed copyright notice
* example-vms/jitterlisp/jitterlisp-main.c: Update copyright notice.
(the_argp_program_version_hook): Update printed copyright notice
* example-vms/structured/structured-main.c: Update copyright notice.
(structured_version): Update printed copyright notice.
* templates/vm-main.c: Update copyright notice.
(the_argp_program_version_hook): Update printed copyright notice.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in .
-# Copyright (C) 2016, 2017, 2018, 2019, 2020 Luca Saiu
-# Updated in 2021 by Luca Saiu
+# Copyright (C) 2016-2020 Luca Saiu
+# Updated in 2021 and 2022 by Luca Saiu
 # Written by Luca Saiu
 
 # This file is part of GNU Jitter.
