temporarily disable minimal-threading on every architecture
The GNU poke people are about to release again but there is some
minimal-threading problem that I have to time to fix.  In order to avoid
problems with less-tested architectures just disable minimal-threading by
default on every platform -- no-threading remains enabled on supported
architectures.
I will re-enable minimal-threading after fixing the bugs.

* configure.ac (jitter_supports_minimal_threading): Redefine to no.  Add
comments.

--- a/configure.ac
+++ b/configure.ac
@@ -1605,6 +1605,12 @@ else
   jitter_has_host_assembly=yes
 fi
 
+# Temporarily, as of 2022-02, disable minimal-threading by default on every
+# architecture: there is some bug that I have not time to fix now but GNU poke
+# is being released.  It is better to ship with no-threading on but
+# minimal-threading disabled.
+jitter_supports_minimal_threading=no
+
 # Define objdump options unconditionally, even if the user disabled host
 # assembly.  This is harmless enough, as the code is defensive and will
 # revert to a sensible fallback solution when objdump fails.
